methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
def hunt() {

                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {left()}; if (!isFacingTrail()) {right(); right()}}; forward()}
    // Write your code here


}

     // Write your code here
 }

 // here come
def isFacingTrail(c:Color):Boolean = {if (isFacingWall()) {return false}
                                   else {forward(); if (getGroundColor()==c) {backward(); return true} else {backward(); return false}}}s your isFacingTrail method